java 8 Thread and Concurrent Example

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
 /java-se-8/target/
 /oopconcept/nbproject/private/
 /oopconcept/build/
+/IpChanger/nbproject/private/
+/IpChanger/build/
+/quizJavaApp/nbproject/private/
+/quizJavaApp/build/
+/quizJavaApp/dist/
+/Java8Concurrency/nbproject/private/
+/Java8Concurrency/build/
