class design example

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@
 /quizJavaApp/dist/
 /Java8Concurrency/nbproject/private/
 /Java8Concurrency/build/
+/Java8ClassDesign/nbproject/private/
+/Java8ClassDesign/build/
