--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,6 @@
 /Java8Concurrency/build/
 /Java8ClassDesign/nbproject/private/
 /Java8ClassDesign/build/
+/Java-Se-ch04/nbproject/private/
+/Java-Se-ch04/build/
+/chapter7/nbproject/private/
